--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="title_activity_maps">Map</string>
     <string name="textview">TextView</string>
+    <string name="title_activity_incidents">IncidentsActivity</string>
+    <string name="tab_text_1">Map</string>
+    <string name="tab_text_2">Text</string>
 </resources>
