--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="title_activity_incidents">IncidentsActivity</string>
     <string name="tab_text_1">Map</string>
     <string name="tab_text_2">Text</string>
+    <string name="name_incident">Name</string>
 </resources>
